(subdir
 node_modules
 (dirs reason-react)
 (vendored_dirs reason-react)
 (subdir
  reason-react/src
  (include_subdirs unqualified)
  (library
   (name reason_react)
   (wrapped false)
   (modes melange))))

(data_only_dirs node_modules/bastet node_modules/relude)

(subdir
 node_modules/bs-bastet/src
 (copy_files# ../../bastet_js/src/*.ml{,i})
 (library
  (name bs_bastet)
  (modes melange)
  (flags -w -67)))

(subdir
 node_modules/bs-css/src
 (library
  (name bs_css)
  (modes melange)))

(subdir
 node_modules/bs-css-emotion/src
 (library
  (name bs_css_emotion)
  (modes melange)))

(subdir
 node_modules/bs-decode/src
 (library
  (name bs_decode)
  (modes melange)))

(subdir
 node_modules/bs-fetch/src
 (library
  (name bs_fetch)
  (modes melange)))

(subdir
 node_modules/relude/src
 (include_subdirs unqualified)
 (library
  (name relude)
  (modes melange)
  (libraries bs_bastet)))

(subdir
 node_modules/relude-fetch/src
 (library
  (name relude_fetch)
  (modes melange)))
