opam-version: "2.0"
synopsis: "Melange project"
description: "Minimal melange project"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "MIT"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
dev-repo: "git+https://github.com/your/project.git"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {dev}
  "melange-compiler-libs" {dev}
  "melange" {dev}
  "reactjs-jsx-ppx" {dev}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
  "ocamlformat-rpc" {dev}
]
pin-depends: [
  [ "dune.dev" "git+https://github.com/ocaml/dune.git#345805c8c6ea635e5d3ed12e9d7edfd3aeb16ec0" ]
  [ "melange-compiler-libs.dev" "git+https://github.com/melange-re/melange-compiler-libs.git#7263bea2285499f5da857f2bb374345a5178791e" ]
  [ "melange.dev" "git+https://github.com/melange-re/melange.git#68c6eff82ed056feed809d6cc82558e8697b965b" ]
  [ "reactjs-jsx-ppx.dev" "git+https://github.com/melange-re/melange.git#68c6eff82ed056feed809d6cc82558e8697b965b" ]
]