(melange.emit
 (target output)
 (alias react)
 (libraries
  melange
  reason_react
  bs-bastet
  bs-css
  bs-css-emotion
  bs-decode
  bs-fetch
  relude
  relude-fetch)
 (modules
  :standard
  \
  base64
  components
  contentFetch
  githubApi
  home
  parsing
  posts
  router)
 ; (modules :standard \ base64 components contentfetch githubapi home parsing posts router)
 (preprocess
  (pps reactjs-jsx-ppx))
 (module_systems es6))

(melange.emit
 (target node)
 (alias node)
 ; (libraries sandbox)
 ; (modules doublehash frontmatterregex sandboxpage)
 (module_systems commonjs))
