(melange.emit
 (target output)
 (alias react)
 (libraries
  melange
  reason_react
  bsBastet
  bs_css
  bs_css_emotion
  bs_decode
  bs_fetch
  relude
  reludeFetch)
 ; (modules :standard)
 (preprocess
  (pps reactjs-jsx-ppx))
 (module_systems es6))

; (melange.emit
;  (target node)
;  (alias node)
;  (module_systems commonjs))
